<resources>
    <string name="app_name">Todo App</string>
    <string name="todo_title">todo title</string>
    <string name="todo_title_hint">todo title hint</string>
    <string name="todo_title_label">What is to be done?</string>
    <string name="todo_detail_label">detail of what to do</string>
    <string name="todo_complete_label">is it complete?</string>
    <string name="todo_date">Todo date</string>
    <string name="new_todo">New Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">Select Date</string>
    <string name="delete">Delete</string>
    <string name="todo_description">description</string>
    <string name="todo_hint">Todo hint</string>
</resources>